0.6.5.7
Issue #921 - Using -useBestContainerOS with foreign database specification fails
Issue #959 - Specifying applicationinsights in app.json without application property throws exception

0.6.5.6
Issue #929 - Get-NavContainerSharedFolders doesn't support :rw or :ro on volumes
Issue #934 - Restart instance after creation of new symbolic link
Issue #924 - Compile App failed - AlcOutput is null
Issue #940 - Vsix analyzer DLLs are not under Win32

0.6.5.5
Use .net core version of alc.exe if available

0.6.5.4
Regression - Issue #930 - Revert fix for #918

0.6.5.3
Issue #918 - Migration of Legacy VeriSign and Symantec Time Stamping Services
Issue #925 - Path Test Apps for 16.0 onprem rtm version

0.6.5.2
Regression - Issue #914 getting generic tag before the image has been pulled

0.6.5.1
Force tls1.2 when using Setup-TraefikContainerForBcContainers
New function Get-LatestAlLanguageExtensionUrl for getting the Url to the latest AL Extension from the marketplace
Added parameter -installCertificateOnHost to New-NavContainer to automatically install the self-signed certificate on the host
Avoid double download of best generic image
First check "Docker is running" before checking "Windows Container" (PR #904 Thanks Tino-T)
Issue #901 - Sort-AppFoldersByDependencies fails if an app.json doesn't have a dependencies section
Issue #907 - Local 14.x onpremises images cannot be started with -useBestContainerOS

0.6.5.0
February 2020 bug fix - -useBestContainerOS will now select between all published generic images. Generic images have been built for all supported Windows 10 versions.

0.6.4.30
Add multitenancy support for useNewDatabase in Clean-BcContainerDatabase
Add support for indirect dependencies when replacing dependencies (if Application exists - only replace dependencies in this + language apps)

0.6.4.29
Issue #863 Clean-BCContainerDatabase doesn't work with current insider master images

0.6.4.28