@@ -1,6 +1,8 @@
 0.6.5.7
 Issue #921 - Using -useBestContainerOS with foreign database specification fails
 Issue #959 - Specifying applicationinsights in app.json without application property throws exception
+PR #949 - support swarm services (Thanks Tobias Fenster)
+Add parameter profile to Get-Tests and Run-Tests to be able to run tests as a specific profile
 
 0.6.5.6
 Issue #929 - Get-NavContainerSharedFolders doesn't support :rw or :ro on volumes
